--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-cdn-plugin": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
