--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "downtonabe",
+  "homepage": "http://mackenzieabe.github.io/photo-port",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "gh-pages": "^4.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
