--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "downtonabe",
-  "homepage": "http://mackenzieabe.github.io/photo-port",
+  "homepage": "http://mackenzieabe.github.io/downtonabe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
