added to package json homepage dep

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mackenzieabe.github.io/DowntonAbe",
+  "homepage": "https://mackenzieabe.github.io/DowntonAbe",
   "name": "downtonabe",
   "version": "0.1.0",
   "private": true,
